--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 1em auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .card {
